an attempt to fix the closed bubbles that appear on mobile sometimes

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -224,6 +224,12 @@
     height: 0;
   }
 
+  @media (hover: none) {
+    #work-cols.hide-others .work-item.closable.closed .cap-container {
+      height: 0;
+    }
+  }
+
   .work-item.unlisted.closed:not(.ish) .cap-container {
     height: 0;
   }
